asatsuyu/crates/asatsuyu-cli/tests/snapshots/diagnostic_snapshots__hir-unresolved-ctor.snap
---
source: crates/asatsuyu-cli/tests/diagnostic_snapshots.rs
expression: text
---
[E0153] Error: unresolved constructor `Foo`
  span: 25..28
  primary [25..28]: unknown constructor
  hint: constructors must be defined in a type declaration
