asatsuyu/crates/asatsuyu-cli/tests/snapshots/diagnostic_snapshots__hir-unresolved-name.snap
---
source: crates/asatsuyu-cli/tests/diagnostic_snapshots.rs
expression: text
---
[E0152] Error: unresolved name `unknown`
  span: 9..16
  primary [9..16]: not found in this scope
