asatsuyu/crates/asatsuyu-cli/tests/snapshots/diagnostic_snapshots__multi-parse-and-recover.snap
---
source: crates/asatsuyu-cli/tests/diagnostic_snapshots.rs
expression: text
---
[E0055] Error: expected expression
  span: 21..24
  primary [21..24]: expected expression
