asatsuyu/crates/asatsuyu-cli/tests/snapshots/diagnostic_snapshots__parse-expected-item.snap
---
source: crates/asatsuyu-cli/tests/diagnostic_snapshots.rs
expression: text
---
[E0051] Error: expected item definition
  span: 0..3
  primary [0..3]: expected item definition
